environment/blade/bookinfo/overlay/gedemo/1.1.match.prefix/patch/bookinfo-virtualservice.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: bookinfo
  namespace: gloo-system
spec:
  displayName: bookinfo
  virtualHost:
    domains:
    - bookinfo.jad.solo.io
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: bookinfo-productpage-9080
            namespace: gloo-system
